refactor: to include resource for api response
